base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunaina-service
  labels:
    app: sunaina
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sunaina
