base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sunaina-route
spec:
  to:
    kind: Service
    name: sunaina-service
  port:
    targetPort: 80
  tls:
    termination: edge
